--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -12,6 +12,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11' 
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -32,7 +42,7 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git diff --quiet dvc.lock || (git add dvc.lock && git commit -m "chore: Update dvc.lock from automated run [skip ci]" && git push)
+          # git diff --quiet dvc.lock || (git add dvc.lock && git commit -m "chore: Update dvc.lock from automated run [skip ci]" && git push)
       
       - name: Trigger AWS CodeBuild for Docker build and deploy
         uses: aws-actions/aws-codebuild-run-build@v1
